--- a/app/src/main/res/layout/item_country.xml
+++ b/app/src/main/res/layout/item_country.xml
@@ -10,6 +10,7 @@
         android:padding="5dp"
         android:layout_width="match_parent"
         android:textColor="@color/textColorBlack"
+        android:gravity="center_vertical"
         android:layout_height="50dp" />
 
 </LinearLayout>
