--- a/app/src/main/res/layout/item_player.xml
+++ b/app/src/main/res/layout/item_player.xml
@@ -9,7 +9,7 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/tv_player_name"
+        android:id="@+id/tv_player_nickname"
         android:padding="5dp"
         android:layout_width="match_parent"
         android:textColor="@color/textColorBlack"
