--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -10,14 +10,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="10dp"
         android:orientation="horizontal">
         
         <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/iv_avatar"
+            android:padding="10dp"
             android:layout_width="200dp"
             android:layout_height="200dp" />
 
         <LinearLayout
+            android:padding="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -35,5 +38,11 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <Button
+        android:layout_margin="10dp"
+        android:text="@string/download_pgn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
